
2007-10-19 cjg
 * Prevented warning in case of undefined subject-name-language.

2007-10-19 cjg
 * Added basic changes for searching chained fields eg. documents.format
 * Fixed bug is date/time searches
 * Fixed issue with double escaping in citations.

2007-10-19 cjg
 * Added tabs for zip and wget upload of documents.

2007-10-19 cjg
 * Added "on_logout" hook.

2007-10-19 cjg
 * Change to DefaultXML import plugin to pass through attributes to the 
    subclassing import plugin.

2007-10-19 cjg
 * Added code for icons to appear in items and review pages.

2007-10-19 cjg
 * Added Screen.pm (part of previous change)

2007-10-19 cjg
 * Added new icons (part of previous change)

2007-12-03 tdb
 * #3139, show deleted records in OAI output instead of just repeating the
    current data set

2007-12-03 cjg
 * Added code to Document to allow importing from URLS

2007-12-03 cjg
 * Import IDs are removed unless import_ids is enabled.

2007-12-04 tdb
 * Don't use the directory from the XML import if enable_import_ids is
    specified
 * Allow enable_import_ids to be used with inbox/buffer/archive/deletion
 * Cleaned up some spelling errors, fixing #3141
 * Don't repeat validation warnings on the Deposit workflow screen, fixing
    #3133
 * Added missing EPrints_Dir_SecuredCGI and EPrints_Dir_Documents variables,
    fixing #2973

2007-12-07 tdb
 * Quote names in emails if they contain a comma, fixing #3112
 * "If there are no items under review" phrase correction, fixing #2998
 * Modified SESSION::render_ruler to use the ruler phrase, fixing #3155
 * Compound fields can be non-multiple, fixing #2983
 * 'minuser' type users can no longer view Screen::Import, fixing #3108

2007-12-10 tdb
 * Don't substr an undefined value in Time fields, fixing #3111
 * Moved page range rendering into 4 phrases, dependent on the pagerange value,
    fixing #2987

2007-12-11 tdb
 * Fixed blister-bar so it correctly hides/shows workflow items controlled with
    STAFF_ONLY, fixing #2985
